--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,20 @@
     <title></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    <!--script(type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=1hZ5gqOxBT8B5clwusZqwsO5")-->
   </head>
+  <!-- script(type='text/javascript',src='/js/lbs.js')-->
   <body>
-    <h1></h1>
-    <p>Welcome to </p>
+    <!--div.container-fluid-->
+    <!--   nav.navbar.navbar-inverse.navbar-fixed-top-->
+    <!--     div.navbar-header-->
+    <!--      a.navbar-brand 分理级服务平台-->
+    <!--script(type='text/javascript')-->
+    <!--  | var map = new BMap.Map("allmap");-->
+    <!--  | map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);-->
+    <!--  | map.addControl(new BMap.MapTypeControl());-->
+    <!--  | map.setCurrentCity("北京");-->
+    <!--  | map.enableScrollWheelZoom(true);-->
+    <!--div(id='allmap')-->
   </body>
 </html>
