--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,14 +4,14 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet',href='/stylesheets/bootstrap.min.css')
-    script(type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=1hZ5gqOxBT8B5clwusZqwsO5")
-    script(type='text/javascript',src='/js/lbs.js')
+    //script(type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=1hZ5gqOxBT8B5clwusZqwsO5")
+  // script(type='text/javascript',src='/js/lbs.js')
   body
     //div.container-fluid
     //   nav.navbar.navbar-inverse.navbar-fixed-top
     //     div.navbar-header
     //      a.navbar-brand 分理级服务平台
-    div(id='allmap')
+
     //script(type='text/javascript')
     //  | var map = new BMap.Map("allmap");
     //  | map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);
