--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,11 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet',href='/stylesheets/bootstrap.min.css')
-    //script(type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=1hZ5gqOxBT8B5clwusZqwsO5")
-  // script(type='text/javascript',src='/js/lbs.js')
+    script(type="text/javascript" src="/js/jquery.min.js")
+    script(type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=1hZ5gqOxBT8B5clwusZqwsO5")
+
   body
+
     //div.container-fluid
     //   nav.navbar.navbar-inverse.navbar-fixed-top
     //     div.navbar-header
