--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: 16px "Î¢ÈíÑÅºÚ", Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -12,4 +12,12 @@ body, html, #allmap {
     overflow: hidden;
     margin: 0;
     font-family: "Î¢ÈíÑÅºÚ";
+}
+
+#tongzhi, #login {
+    padding-bottom: 20px;
+}
+
+.checkbox {
+    font: 16px "Î¢ÈíÑÅºÚ";
 }
