--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,9 @@
     <title></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <!--script(type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=1hZ5gqOxBT8B5clwusZqwsO5")-->
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&amp;ak=1hZ5gqOxBT8B5clwusZqwsO5"></script>
   </head>
-  <!-- script(type='text/javascript',src='/js/lbs.js')-->
   <body>
     <!--div.container-fluid-->
     <!--   nav.navbar.navbar-inverse.navbar-fixed-top-->
@@ -18,6 +18,7 @@
     <!--  | map.addControl(new BMap.MapTypeControl());-->
     <!--  | map.setCurrentCity("北京");-->
     <!--  | map.enableScrollWheelZoom(true);-->
-    <!--div(id='allmap')-->
+    <div id="allmap"></div>
+    <script type="text/javascript" src="/js/lbs.js"></script>
   </body>
 </html>
