--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,3 +21,26 @@ body, html, #allmap {
 .checkbox {
     font: 16px "Î¢ÈíÑÅºÚ";
 }
+
+#mynavbar {
+    width: 100%;
+    height: 44px;
+}
+
+.left {
+    position: absolute;
+    top: 44px;
+    left: 0;
+    bottom: 0;
+    width: 350px;
+    background-color: #FFF;
+    border-right: 1px solid #C8C8C8;
+}
+
+.right_mapDiv {
+    position: absolute;
+    top: 44px;
+    bottom: 0;
+    right: 0;
+    left: 352px;
+}
