--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,10 @@ block content
     div.container-fluid
         nav.navbar.navbar-inverse.navbar-fixed-top(id='mynavbar')
             div.navbar-header
-                a.navbar-brand 分理级服务平台
+                a.navbar-brand 河南北斗分理级服务平台
+    div(id='shensuo')
     div.left
-    div.right_mapDiv
+    div.right
         div(id='allmap')
+
+
