--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,18 +4,9 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet',href='/stylesheets/bootstrap.min.css')
-    script(type="text/javascript" src="/js/jquery.min.js")
-    script(type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=1hZ5gqOxBT8B5clwusZqwsO5")
+    script(type="text/javascript",src="/js/jquery.min.js")
+    script(type="text/javascript",src="http://api.map.baidu.com/api?v=2.0&ak=1hZ5gqOxBT8B5clwusZqwsO5")
 
   body
-
-
-
-    //script(type='text/javascript')
-    //  | var map = new BMap.Map("allmap");
-    //  | map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);
-    //  | map.addControl(new BMap.MapTypeControl());
-    //  | map.setCurrentCity("北京");
-    //  | map.enableScrollWheelZoom(true);
 
     block content
