左右侧两栏暂时设为固定的

--- a/views/index.html
+++ b/views/index.html
@@ -15,8 +15,8 @@
       </nav>
     </div>
     <div id="shensuo"></div>
-    <div class="left"></div>
-    <div class="right">
+    <div id="left" class="left"></div>
+    <div id="right" class="right">
       <div id="allmap"></div>
     </div>
   </body>
