--- a/views/index.jade
+++ b/views/index.jade
@@ -6,8 +6,6 @@ block content
             div.navbar-header
                 a.navbar-brand 河南北斗分理级服务平台
     div(id='shensuo')
-    div.left
-    div.right
+    div.left(id='left')
+    div.right(id='right')
         div(id='allmap')
-
-
