--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ a {
     color: #00B7FF;
 }
 
-body, html, #allmap {
+body, tt, html, #allmap {
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -35,9 +35,10 @@ body, html, #allmap {
     width: 20%;
     background-color: #FFF;
     border-right: 1px solid #C8C8C8;
+    display: none;
 }
 
-.right {
+.right, #right {
     position: fixed;
     float: left;
     top: 44px;
@@ -48,9 +49,5 @@ body, html, #allmap {
 }
 
 #shensuo {
-    margin-top: 400px;
-    width: 10px;
-    height: 50px;
-    background-color: #000;
     display: block;
 }
