--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,57 @@
 extends layout
 block content
     script(type='text/javascript',src='/js/lbs.js')
+    link(rel='stylesheet', href='//apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css')
+    script(src='//apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js')
+    script(src='//apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js')
+
     div.container-fluid
         nav.navbar.navbar-inverse.navbar-fixed-top(id='mynavbar')
             div.navbar-header
                 a.navbar-brand 河南北斗分理级服务平台
     div(id='shensuo')
     div.left(id='left')
+        #accordion
+            h3 部分 1
+            div
+                p
+                    | Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+                    | ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+                    | amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+                    | odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+            h3 部分 2
+            div
+                p
+                    | Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+                    | purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+                    | velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
+                    | suscipit faucibus urna.
+            h3 部分 3
+            div
+                p
+                    | Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
+                    | Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
+                    | ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
+                    | lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
+                ul
+                    li List item one
+                    li List item two
+                    li List item three
+            h3 部分 4
+            div
+                p
+                    | Cras dictum. Pellentesque habitant morbi tristique senectus et netus
+                    | et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
+                    | faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
+                    | mauris vel est.
+                p
+                    | Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
+                    | Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                    | inceptos himenaeos.
+    script.
+        $(function () {
+            $("#accordion").accordion();
+        });
+
     div.right(id='right')
         div(id='allmap')
