--- a/views/index.html
+++ b/views/index.html
@@ -4,20 +4,8 @@
     <title></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-    <!--if IE 7alink(rel='stylesheet', href='assets/css/font-awesome-ie7.min.css')
-    -->
-    <!-- page specific plugin styles-->
-    <!-- fonts-->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300">
-    <!-- ace styles-->
-    <link rel="stylesheet" href="/assets/css/ace.min.css">
-    <link rel="stylesheet" href="/assets/css/ace-rtl.min.css">
-    <link rel="stylesheet" href="/assets/css/ace-skins.min.css">
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&amp;ak=1hZ5gqOxBT8B5clwusZqwsO5"></script>
-    <!--admin相关的css-->
-    <script src="/assets/js/ace-extra.min.js"></script>
   </head>
   <body>
     <script type="text/javascript" src="/js/lbs.js"></script>
@@ -25,9 +13,30 @@
     <script src="//apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <div class="container-fluid">
-      <nav id="mynavbar" class="navbar navbar-inverse navbar-fixed-top">
+      <nav id="mynavbar" class="navbar navbar-inverse navbar-fixed-top navbar-right">
         <div class="navbar-header"><a class="navbar-brand">北斗分理级服务平台</a></div>
+        <collapse id="navbar" class="navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a data-toggle="modal" data-target="#login">登陆</a></li>
+            <li><a data-toggle="modal" data-target="#reg">注册</a></li>
+          </ul>
+        </collapse>
       </nav>
+    </div>
+    <div id="login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" data-dismiss="modal" aria-hidden="true" class="close">×</button>
+            <h4 id="myModalLabel" class="modal-title">模态框（Modal）标题</h4>
+          </div>
+          <div class="modal-body">在这里添加一些文本</div>
+          <div class="modal-footer">
+            <button type="button" data-dismiss="modal" class="btn btn-default">关闭</button>
+            <button type="button" class="btn btn-primary">提交更改</button>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="shensuo"></div>
     <div id="left" class="left">
