--- a/views/index.jade
+++ b/views/index.jade
@@ -1,37 +1,52 @@
 extends layout
+
 block content
     script(type='text/javascript',src='/js/lbs.js')
     link(rel='stylesheet', href='//apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css')
-    script(src='//apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js')
     script(src='//apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js')
 
-    div.container-fluid
-        nav.navbar.navbar-inverse.navbar-fixed-top.navbar-right(id='mynavbar')
-            div.navbar-header
-                a.navbar-brand 北斗分理级服务平台
-            collapse.navbar-collapse(id='navbar')
-                ul.nav.navbar-nav.navbar-right
-                    li
-                        a(data-toggle="modal" data-target="#login") 登陆
-                    li
-                        a(data-toggle="modal" data-target="#reg") 注册
-
-    #login.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+        // Brand and toggle get grouped for better mobile display
+        .navbar-header
+            button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex1-collapse')
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+            a.navbar-brand(href='#') 河南北斗分理服务平台
+        // Collect the nav links, forms, and other content for toggling
+        .collapse.navbar-collapse.navbar-ex1-collapse
+            ul.nav.navbar-nav.navbar-right
+                li
+                    a(href='#', data-toggle='modal', data-target='#myModal') 登陆
+                li
+                    a(href='#') 登陆
+        // /.navbar-collapse
+    // 模态框（Modal）
+    #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
         .modal-dialog
             .modal-content
-                .modal-header
-                    button.close(type='button', data-dismiss='modal', aria-hidden='true')
-                        | ×
-                    h4#myModalLabel.modal-title
-                        | 模态框（Modal）标题
                 .modal-body
-                    | 在这里添加一些文本
-                .modal-footer
-                    button.btn.btn-default(type='button', data-dismiss='modal')
-                        | 关闭
-                    button.btn.btn-primary(type='button')
-                        | 提交更改
-
+                    .container(id='loginContainer')
+                        div.row
+                            div.col-xs-4
+                                div.panel.panel-info
+                                    div.panel-heading 登陆
+                                    div.panel-body
+                                        form.form-signin(method='post')
+                                            h2.form-signin-heading
+                                                label.sr-only(for='useremail') Email address
+                                                input#useremail.form-control(type='email',name='useremail',placeholder='Email address', required='', autofocus='')
+                                                label.sr-only(for='userpassword') Password
+                                                input#userpassword.form-control(type='password',name='userpassword',placeholder='Password', required='')
+                                                .checkbox
+                                                    label
+                                                        input(type='checkbox', value='remember-pswd')
+                                                        | 记住密码
+                                                    label.pull-right
+                                                        input(type='checkbox', value='auto-login')
+                                                        | 自动登陆
+                                                button.btn.btn-primary.btn-block(type='submit') 登陆
 
     div(id='shensuo')
     div.left(id='left')
