--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,6 @@
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&amp;ak=1hZ5gqOxBT8B5clwusZqwsO5"></script>
   </head>
   <body>
-    <script type="text/javascript" src="/js/lbs.js"></script>
     <link rel="stylesheet" href="//apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css">
     <script src="//apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
@@ -21,14 +20,14 @@
       <!-- Collect the nav links, forms, and other content for toggling-->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" data-toggle="modal" data-target="#myModal">登陆</a></li>
-          <li><a href="#">登陆</a></li>
+          <li><a href="#" data-toggle="modal" data-target="#login">登陆</a></li>
+          <li><a href="#" data-toggle="modal" data-target="#reg">注册</a></li>
         </ul>
       </div>
       <!-- /.navbar-collapse-->
     </nav>
     <!-- 模态框（Modal）-->
-    <div id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+    <div id="login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-body">
@@ -38,7 +37,7 @@
                   <div class="panel panel-info">
                     <div class="panel-heading">登陆</div>
                     <div class="panel-body">
-                      <form method="post" class="form-signin">
+                      <form method="post" action="Login" class="form-signin">
                         <h2 class="form-signin-heading">
                           <label for="useremail" class="sr-only">Email address</label>
                           <input id="useremail" type="email" name="useremail" placeholder="Email address" required="" autofocus="" class="form-control">
@@ -53,6 +52,39 @@
                             </label>
                           </div>
                           <button type="submit" class="btn btn-primary btn-block">登陆</button>
+                        </h2>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="reg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div id="loginContainer" class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="panel panel-info">
+                    <div class="panel-heading">注册</div>
+                    <div class="panel-body">
+                      <form method="post" class="form-signin">
+                        <h2 class="form-signin-heading">
+                          <label for="useremail" class="sr-only">Email address</label>
+                          <input id="useremail" type="email" name="useremail" placeholder="Email address" required=""
+                                 autofocus="" class="form-control">
+                          <label for="userpassword" class="sr-only">Password</label>
+                          <input id="userpassword" type="password" name="userpassword" placeholder="请输入密码" required=""
+                                 class="form-control">
+                          <label for="userpassword-repeat" class="sr-only">Password</label>
+                          <input id="userpassword" type="password" name="userpassword-repeat" placeholder="再次输入密码确认"
+                                 required="" class="form-control">
+                          <button type="submit" class="btn btn-primary btn-block">注册</button>
                         </h2>
                       </form>
                     </div>
@@ -127,5 +159,6 @@
     <div id="right" class="right">
       <div id="allmap"></div>
     </div>
+    <script type="text/javascript" src="/js/lbs.js"></script>
   </body>
 </html>
